# hao_book_robot

./: .gitignore  README.md
src/hao_cpp/cmake_compile/: CMakeLists.txt  foo.cpp  foo.h
src/hao_cpp/cmake_practice/t1/: CMakeLists.txt  main.cpp
src/hao_cpp/cmake_practice/t2/: CMakeLists.txt
src/hao_cpp/cmake_practice/t2/src/: main.cpp
src/hao_cpp/g++_compile/demo/: demo  main.cpp
src/hao_cpp/learn_cmake/: CMakeLists.txt  main.cpp
src/hao_cpp/learn_cmake/helloworld/: CMakeLists.txt  helloworld.cpp
src/hao_cpp/learn_cmake/helloworld/hello/: CMakeLists.txt  hello.h
src/hao_cpp/learn_cmake/helloworld/world/: CMakeLists.txt  world.cpp
src/hao_cpp/make_compile/demo/: demo
src/hao_cpp/slam_cmake/: CMakeLists.txt
src/hao_opencv/calc_hist/: CMakeLists.txt  calc_hist.cpp
src/hao_opencv/image_from_cam/: image_from_cam.cpp
src/hao_opencv/image_from_img/: image_from_img.cpp
src/hao_opencv/image_from_vid/: image_from_vid.cpp
src/hao_opencv/xfeatures2d_example/: CMakeLists.txt  orb_extract.cpp  sift_extract.cpp  surf_extract.cpp
src/hao_ros/action_example/: CMakeLists.txt  package.xml
src/hao_ros/action_example/src/: action_client_node.cpp  action_server_node.cpp
src/hao_ros/service_example/: CMakeLists.txt  package.xml
src/hao_ros/service_example/src/: client_node.cpp  server_node.cpp
src/hao_ros/topic_example/: CMakeLists.txt  package.xml
src/hao_ros/topic_example/src/: publisher_node.cpp  subscribe_node.cpp
